[package]
name = "wry-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = { version = "0.12", default-features = false, features = [
    "file-drop",
    "protocol",
] }

actix = "0.12"
actix-rt = "2"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.6"

anyhow = "1"
log = "0.4.14"
env_logger = "0.9.0"
